force-app/main/default/objects/OutboundNotificationDeleteEvent__e/OutboundNotificationDeleteEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event notifying subscribers that there was an integration transaction change for the WBS or Cost Center on the Timesheet_Equipment_Entry__c object, requiring a delete on the SAP side.</description>
    <label>OutboundNotificationDeleteEvent</label>
    <pluralLabel>OutboundNotificationDeleteEvents</pluralLabel>
</CustomObject>