force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>