force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>