force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>