force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>