force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>