force-app/main/default/objects/OutboundNotificationDeleteEvent__e/fields/WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>WBS_Element__c</fullName>
    <label>WBS Element</label>
    <length>50</length>
    <type>Text</type>
</CustomField>